// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application-menu, given platform is 'darwin' given enough time passes populates application menu 1`] = `
"[
  'root',
  'root -> mac',
  'root -> mac -> about',
  'root -> mac -> separator-1',
  'root -> mac -> navigate-to-preferences',
  'root -> mac -> navigate-to-extensions',
  'root -> mac -> separator-2',
  'root -> mac -> services',
  'root -> mac -> separator-3',
  'root -> mac -> hide',
  'root -> mac -> hide-others',
  'root -> mac -> unhide',
  'root -> mac -> separator-4',
  'root -> mac -> quit',
  'root -> file',
  'root -> file -> add-cluster',
  'root -> file -> separator-1-for-file',
  'root -> file -> close-window',
  'root -> edit',
  'root -> edit -> undo',
  'root -> edit -> redo',
  'root -> edit -> separator-1-in-edit',
  'root -> edit -> cut',
  'root -> edit -> copy',
  'root -> edit -> paste',
  'root -> edit -> delete',
  'root -> edit -> separator-2-in-edit',
  'root -> edit -> selectAll',
  'root -> view',
  'root -> view -> navigate-to-catalog',
  'root -> view -> open-command-palette',
  'root -> view -> separator-1-for-view',
  'root -> view -> go-back',
  'root -> view -> go-forward',
  'root -> view -> reload',
  'root -> view -> toggle-dev-tools',
  'root -> view -> separator-2-for-view',
  'root -> view -> reset-zoom',
  'root -> view -> zoom-in',
  'root -> view -> zoom-out',
  'root -> view -> separator-3-for-view',
  'root -> view -> toggle-full-screen',
  'root -> help',
  'root -> help -> navigate-to-welcome',
  'root -> help -> open-documentation',
  'root -> help -> open-support'
]"
`;

exports[`application-menu, given platform is 'linux' given enough time passes populates application menu 1`] = `
"[
  'root',
  'root -> file',
  'root -> file -> add-cluster',
  'root -> file -> navigate-to-preferences',
  'root -> file -> navigate-to-extensions',
  'root -> file -> quit',
  'root -> edit',
  'root -> edit -> undo',
  'root -> edit -> redo',
  'root -> edit -> separator-1-in-edit',
  'root -> edit -> cut',
  'root -> edit -> copy',
  'root -> edit -> paste',
  'root -> edit -> delete',
  'root -> edit -> separator-2-in-edit',
  'root -> edit -> selectAll',
  'root -> view',
  'root -> view -> navigate-to-catalog',
  'root -> view -> open-command-palette',
  'root -> view -> separator-1-for-view',
  'root -> view -> go-back',
  'root -> view -> go-forward',
  'root -> view -> reload',
  'root -> view -> toggle-dev-tools',
  'root -> view -> separator-2-for-view',
  'root -> view -> reset-zoom',
  'root -> view -> zoom-in',
  'root -> view -> zoom-out',
  'root -> view -> separator-3-for-view',
  'root -> view -> toggle-full-screen',
  'root -> help',
  'root -> help -> navigate-to-welcome',
  'root -> help -> open-documentation',
  'root -> help -> open-support',
  'root -> help -> about'
]"
`;

exports[`application-menu, given platform is 'win32' given enough time passes populates application menu 1`] = `
"[
  'root',
  'root -> file',
  'root -> file -> add-cluster',
  'root -> file -> navigate-to-preferences',
  'root -> file -> navigate-to-extensions',
  'root -> file -> quit',
  'root -> edit',
  'root -> edit -> undo',
  'root -> edit -> redo',
  'root -> edit -> separator-1-in-edit',
  'root -> edit -> cut',
  'root -> edit -> copy',
  'root -> edit -> paste',
  'root -> edit -> delete',
  'root -> edit -> separator-2-in-edit',
  'root -> edit -> selectAll',
  'root -> view',
  'root -> view -> navigate-to-catalog',
  'root -> view -> open-command-palette',
  'root -> view -> separator-1-for-view',
  'root -> view -> go-back',
  'root -> view -> go-forward',
  'root -> view -> reload',
  'root -> view -> toggle-dev-tools',
  'root -> view -> separator-2-for-view',
  'root -> view -> reset-zoom',
  'root -> view -> zoom-in',
  'root -> view -> zoom-out',
  'root -> view -> separator-3-for-view',
  'root -> view -> toggle-full-screen',
  'root -> help',
  'root -> help -> navigate-to-welcome',
  'root -> help -> open-documentation',
  'root -> help -> open-support',
  'root -> help -> about'
]"
`;
